# CarPlayQT

./: CMakeLists.txt  accueille.cpp  accueille.h  bluetooth.cpp  bluetooth.h  bluetooth_tmp.cpp  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.h  wifi.cpp  wifi.h
.qtcreator/: CMakeLists.txt.user.3c2db28
